# my_isaacgymENV

./: README.md
assets/urdf/UR10e_description/ma/: manifest.xml
assets/urdf/UR10e_description/mc_capsule/: CMakeLists.txt  package.xml
assets/urdf/UR10e_description/mc_capsule/launch/: display.launch  gazebo.launch
assets/urdf/UR10e_description/mc_capsule/meshes/: base_link.STL  base_link.dae
assets/urdf/UR10e_description/mc_capsule/urdf/: mc_capsule.csv  mc_capsule.urdf
isaacgymenvs/cfg/: config.yaml
isaacgymenvs/cfg/task/: UR10eMagStack.yaml  UR10eMagStackplay.yaml
isaacgymenvs/cfg/train/: UR10eMagStackPPO.yaml  UR10eMagStackPPOplay.yaml
isaacgymenvs/tasks/: UR10e_Mag_stack.py  __init__.py  franka_cube_stack.py
isaacgymenvs/tasks/base/: vec_task.py
runs/AllegroKukaPPO_22-16-55-40/: config.yaml
runs/AllegroKukaPPO_22-16-55-40/summaries/: events.out.tfevents.1713776151.ding-MS-7E06
runs/Ant_22-16-33-09/summaries/: events.out.tfevents.1713774791.ding-MS-7E06
runs/FrankaCubeStack_22-16-34-41/summaries/: events.out.tfevents.1713774882.ding-MS-7E06
runs/FrankaCubeStack_22-16-55-21/: config.yaml
runs/FrankaCubeStack_22-16-55-21/summaries/: events.out.tfevents.1713776123.ding-MS-7E06
runs/FrankaCubeStack_23-14-30-09/summaries/: events.out.tfevents.1713853811.ding-MS-7E06
runs/FrankaCubeStack_23-14-31-32/summaries/: events.out.tfevents.1713853894.ding-MS-7E06
runs/UR10eMagStack_01-14-50-40/: config.yaml
runs/UR10eMagStack_22-10-25-17/: config.yaml
runs/UR10eMagStack_22-15-47-51/: config.yaml
runs/UR10eMagStack_23-19-21-46/: config.yaml
(+54 files in other folders)
